--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd config/dev.env nodemon src/index.js"
+    "dev": "env-cmd config/dev.env nodemon src/index.js",
+    "test": "env-cmd config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +26,9 @@
     "validator": "^10.9.0"
   },
   "devDependencies": {
+    "env-cmd": "^8.0.2",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.9",
-    "env-cmd": "^8.0.2"
+    "supertest": "^3.4.1"
   }
 }
